<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@color/white"
    android:id="@+id/rl_equip_detail_main"
    tools:context=".view.fragments.EquipmentDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <FrameLayout
            android:id="@+id/fl_equip_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_equip_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:background="@color/equip_image_background"
                android:contentDescription="@string/image_contentDescription"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/critical_button_background"
                android:elevation="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/iv_critical_equip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_contentDescription"
                    android:src="@drawable/ic_critical_unselected" />
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_equipment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_equip_image"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@color/blue_grey_900"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            tools:text="Brand + Equipment Title" />

        <TextView
            android:id="@+id/tv_code_label"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_equipment"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/lbl_code"
            android:textColor="@color/blue_grey_900"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_equipment"
            android:layout_marginStart="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:textColor="@color/grey_900"
            android:textSize="@dimen/_14sdp"
            tools:text="Code Value" />

        <TextView
            android:id="@+id/tv_type_label"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_code_label"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/lbl_type"
            android:textColor="@color/blue_grey_900"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_code_label"
            android:layout_marginStart="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:textColor="@color/grey_900"
            android:textSize="@dimen/_14sdp"
            tools:text="Type Value" />

        <TextView
            android:id="@+id/tv_local1_label"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_type_label"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/lbl_local1"
            android:textColor="@color/blue_grey_900"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_local1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_type_label"
            android:layout_marginStart="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:textColor="@color/grey_900"
            android:textSize="@dimen/_14sdp"
            tools:text="Local 1 Value" />

        <TextView
            android:id="@+id/tv_local2_label"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_local1_label"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/lbl_local2"
            android:textColor="@color/blue_grey_900"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_local2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_local1_label"
            android:layout_marginStart="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:textColor="@color/grey_900"
            android:textSize="@dimen/_14sdp"
            tools:text="Local 2 Value" />

        <TextView
            android:id="@+id/tv_note_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_local2_label"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/lbl_note"
            android:textAlignment="center"
            android:textColor="@color/blue_grey_900"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_note_label"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textAlignment="center"
            android:textColor="@color/grey_900"
            android:textSize="@dimen/_14sdp"
            tools:text="Note Value" />

    </RelativeLayout>
</ScrollView>